// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render one flow 1`] = `
<ConciseIssueLocationBadge
  count={3}
  key="0"
  onClick={[Function]}
  selected={false}
/>
`;

exports[`should render secondary locations 1`] = `
<ConciseIssueLocationBadge
  count={3}
  key="-1"
  selected={true}
/>
`;

exports[`should render several flows 1`] = `
Array [
  <ConciseIssueLocationBadge
    count={3}
    key="0"
    onClick={[Function]}
    selected={false}
  />,
  <ConciseIssueLocationBadge
    count={2}
    key="1"
    onClick={[Function]}
    selected={false}
  />,
  <ConciseIssueLocationBadge
    count={3}
    key="2"
    onClick={[Function]}
    selected={false}
  />,
]
`;
